# DiKErnel

./: .gitignore  CMakeLists.txt  DEPENDENCIES.md  DiKErnel.sln  DiKErnel.sln.DotSettings  DiKErnelTest.cpp.gcov  Directory.Packages.props  LICENSE-3RD-PARTY  Nuget.config  README.md  README.txt
DiKErnel/: CMakeLists.txt
DiKErnel/Src/: CMakeLists.txt
DiKErnel/Test/: CMakeLists.txt
Src/: CMakeLists.txt  Controller.cpp  Controller.h  DiKErnel.cpp  DiKErnel.h  InputComposer.cpp
Src/Core/: CMakeLists.txt  Calculator.cpp  Calculator.h  Controller.h
Src/DiKErnel.Application/: ApplicationHelper.cs
Src/DiKErnel.CWrapper/: DiKErnel.CWrapper.vcxproj  dllmain.cpp
Src/DiKErnel.Cli/: ArgumentType.cs  CommandLineArgumentParser.cs  DiKErnel.Cli.csproj  ExitCodes.cs  Program.cs
Src/DiKErnel.Core/: CalculationMode.cs  Calculator.cs  CalculatorSettings.cs  DiKErnel.Core.csproj  ILogHandler.cs  Validator.cs
Src/DiKErnel.DomainLibrary/: Constants.cs  DiKErnel.DomainLibrary.csproj
Src/DiKErnel.External.Overtopping/: DiKErnel.External.Overtopping.csproj  OvertoppingAdapter.cs
Src/DiKErnel.FunctionLibrary/: CMath.cs  CMathF.cs  DiKErnel.FunctionLibrary.csproj  GenericFunctions.cs  HydraulicLoadFunctions.cs  RevetmentFunctions.cs
Src/DiKErnel.GpuConsole/: AsphaltWaveImpactCalculator.cs  AsphaltWaveImpactGpuCalculator.cs  AsphaltWaveImpactGpuFunctions.cs  AsphaltWaveImpactGpuInput.cs  AsphaltWaveImpactGpuOutput.cs  AsphaltWaveImpactIncrementDamageGpuInput.cs  DiKErnel.GpuConsole.csproj  Program.cs  Resources.Designer.cs  TimeDependentGpuInput.cs
Src/DiKErnel.GrassPerformance/: DiKErnel.GrassPerformance.csproj  Program.cs  Resources.Designer.cs
Src/DiKErnel.Gui/: App.xaml  App.xaml.cs  AssemblyInfo.cs  ComparisonConverter.cs  DiKErnel.Gui.csproj  MainWindow.xaml  MainWindow.xaml.cs  TextType.cs
Src/DiKErnel.Integration/: CalculationInputBuilder.cs  DiKErnel.Integration.csproj
Src/DiKErnel.KernelWrapper.Json.Input/: ComposedInputData.cs  DiKErnel.KernelWrapper.Json.Input.csproj  JsonInputAdapter.cs  JsonInputComposer.cs
Src/DiKErnel.KernelWrapper.Json.Output/: CalculationOutputAdapter.cs  DiKErnel.KernelWrapper.Json.Output.csproj  JsonOutputComposer.cs  JsonOutputType.cs
Src/DiKErnel.Optimization/: DiKErnel.Optimization.vcxproj  dllmain.cpp
Src/DiKErnel.PerformanceConsole/: DiKErnel.PerformanceConsole.csproj  Program.cs  Resources.Designer.cs  Resources.resx
Src/DiKErnel.Util/: DataResult.cs  DiKErnel.Util.csproj  Event.cs  EventRegistry.cs  EventType.cs  SimpleResult.cs
Src/Input/: CMakeLists.txt  InputComposer.h
Src/Output/: CMakeLists.txt  OutputComposer.cpp  OutputComposer.h
Test/: CMakeLists.txt  ControllerTest.cpp  DiKErnelTest.cpp
Test/Core/: CMakeLists.txt  ControllerTest.cpp
Test/DiKErnel.Core.Test/: CalculatorSettingsTest.cs  CalculatorTest.cs  DiKErnel.Core.Test.csproj  ValidatorTest.cs
Test/DiKErnel.DomainLibrary.Test/: ConstantsTest.cs  DiKErnel.DomainLibrary.Test.csproj
Test/DiKErnel.External.Overtopping.Test/: DiKErnel.External.Overtopping.Test.csproj  OvertoppingAdapterTest.cs
Test/DiKErnel.FunctionLibrary.Test/: DiKErnel.FunctionLibrary.Test.csproj  GenericFunctionsTest.cs  HydraulicLoadFunctionsTest.cs  RevetmentFunctionsTest.cs
Test/DiKErnel.FunctionLibrary.TestUtil/: AssertHelper.cs
Test/DiKErnel.Integration.Test/: CalculationInputBuilderTest.cs  DiKErnel.Integration.Test.csproj
Test/DiKErnel.Integration.TestUtil/: AsphaltRevetmentWaveImpactLocationDependentInputAssertHelper.cs  AsphaltWaveImpactLocationDependentInputAssertHelper.cs  DiKErnel.Integration.TestUtil.csproj  GrassCumulativeOverloadLocationDependentInputAssertHelper.cs  GrassOvertoppingRayleighDiscreteLocationDependentInputAssertHelper.cs  GrassRayleighDiscreteLocationDependentInputAssertHelper.cs  GrassRevetmentOvertoppingLocationDependentInputAssertHelper.cs  GrassRevetmentRayleighDiscreteLocationDependentInputAssertHelper.cs  GrassRevetmentWaveImpactLocationDependentInputAssertHelper.cs  GrassRevetmentWaveRunupLocationDependentInputAssertHelper.cs  GrassRevetmentWaveRunupRayleighLocationDependentInputAssertHelper.cs  GrassWaveImpactLocationDependentInputAssertHelper.cs  GrassWaveOvertoppingRayleighDiscreteLocationDependentInputAssertHelper.cs  GrassWaveOvertoppingRayleighLocationDependentInputAssertHelper.cs  GrassWaveRunupBattjesGroenendijkAnalyticalLocationDependentInputAssertHelper.cs  GrassWaveRunupLocationDependentInputAssertHelper.cs  GrassWaveRunupRayleighDiscreteLocationDependentInputAssertHelper.cs  LocationDependentInputAssertHelper.cs  NaturalStoneRevetmentLocationDependentInputAssertHelper.cs  NaturalStoneWaveImpactLocationDependentInputAssertHelper.cs  ProfileDataAssertHelper.cs  TimeDependentInputAssertHelper.cs
Test/DiKErnel.KernelWrapper.Json.Input.Test/: ComposedInputDataTest.cs  DiKErnel.KernelWrapper.Json.Input.Test.csproj  JsonInputComposerTest.cs
Test/DiKErnel.KernelWrapper.Json.Output.Test/: DiKErnel.KernelWrapper.Json.Output.Test.csproj  JsonOutputComposerTest.cs
Test/DiKErnel.Performance.Test/: AsphaltWaveImpactPerformanceTest.cs  DiKErnel.Performance.Test.csproj  GrassWaveImpactPerformanceTest.cs  GrassWaveOvertoppingRayleighAnalyticalPerformanceTest.cs  GrassWaveOvertoppingRayleighDiscretePerformanceTest.cs  GrassWaveRunupBattjesGroenendijkAnalyticalPerformanceTest.cs  GrassWaveRunupRayleighDiscretePerformanceTest.cs  NaturalStoneWaveImpactPerformanceTest.cs  PerformanceBenchmarkingTest.cs  PerformanceTest.cs  PerformanceTestBase.cs  Resources.Designer.cs  Resources.resx
Test/DiKErnel.SpecFlow.Test/: DiKErnel.SpecFlow.Test.csproj  specflow.json
Test/DiKErnel.System.Test/: AsphaltRevetmentWaveImpactCalculationTest.cs  AsphaltWaveImpactCalculationTest.cs  CalculationTest.cs  CalculationTestBase.cs  DiKErnel.System.Test.csproj  GrassOvertoppingRayleighDiscreteCalculationTest.cs  GrassRevetmentOvertoppingCalculationTest.cs  GrassRevetmentWaveImpactCalculationTest.cs  GrassRevetmentWaveRunupRayleighCalculationTest.cs  GrassWaveImpactCalculationTest.cs  GrassWaveOvertoppingRayleighDiscreteCalculationTest.cs  ValidationSystemTest.cs  (+3 more)
(+2244 files in other folders)
