# Add directories
add_subdirectory(DiKErnel.Application)
if(CMAKE_GENERATOR_PLATFORM STREQUAL "x64")
  add_subdirectory(DiKErnel.Cli)
endif()
add_subdirectory(DiKErnel.Core)
add_subdirectory(DiKErnel.DomainLibrary)
add_subdirectory(DiKErnel.External.Overtopping)
add_subdirectory(DiKErnel.FunctionLibrary)
if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC" AND CMAKE_GENERATOR_PLATFORM STREQUAL "x64")
  add_subdirectory(DiKErnel.Gui)
endif()
add_subdirectory(DiKErnel.Integration)
add_subdirectory(DiKErnel.KernelWrapper.Json.Input)
add_subdirectory(DiKErnel.KernelWrapper.Json.Output)
add_subdirectory(DiKErnel.Util)