# Add directories
add_subdirectory(DiKErnel.Core)
add_subdirectory(DiKErnel.DomainLibrary)
add_subdirectory(DiKErnel.External.Overtopping)
add_subdirectory(DiKErnel.FunctionLibrary)
add_subdirectory(DiKErnel.Integration)
add_subdirectory(DiKErnel.Optimization)
add_subdirectory(DiKErnel.PerformanceConsole)
add_subdirectory(DiKErnel.Util)