# Set library name
set(LIBNAME DiKErnel.DomainLibrary)

# Set folder names
set(PUBLIC_FOLDER Public)
set(PUBLIC_DEFAULTS_FOLDER ${PUBLIC_FOLDER}/Defaults)
set(PUBLIC_DEFAULTS_ASPHALT_REVETMENT_WAVE_IMPACT_FOLDER ${PUBLIC_DEFAULTS_FOLDER}/AsphaltRevetmentWaveImpact)
set(PUBLIC_DEFAULTS_GRASS_REVETMENT_WAVE_IMPACT_FOLDER ${PUBLIC_DEFAULTS_FOLDER}/GrassRevetmentWaveImpact)
set(PUBLIC_DEFAULTS_GRASS_REVETMENT_WAVE_RUNUP_FOLDER ${PUBLIC_DEFAULTS_FOLDER}/GrassRevetmentWaveRunup)
set(PUBLIC_DEFAULTS_NATURAL_STONE_REVETMENT_FOLDER ${PUBLIC_DEFAULTS_FOLDER}/NaturalStoneRevetment)
set(PUBLIC_VALIDATORS_FOLDER ${PUBLIC_FOLDER}/Validators)
set(PUBLIC_VALIDATORS_ASPHALT_REVETMENT_WAVE_IMPACT_FOLDER ${PUBLIC_VALIDATORS_FOLDER}/AsphaltRevetmentWaveImpact)
set(PUBLIC_VALIDATORS_GRASS_REVETMENT_WAVE_IMPACT_FOLDER ${PUBLIC_VALIDATORS_FOLDER}/GrassRevetmentWaveImpact)
set(PUBLIC_VALIDATORS_GRASS_REVETMENT_WAVE_RUNUP_FOLDER ${PUBLIC_VALIDATORS_FOLDER}/GrassRevetmentWaveRunup)
set(PUBLIC_VALIDATORS_NATURAL_STONE_REVETMENT_FOLDER ${PUBLIC_VALIDATORS_FOLDER}/NaturalStoneRevetment)

# Define sources
set(SOURCEFILES_PUBLIC
  ${PUBLIC_FOLDER}/Constants.cpp
  ${PUBLIC_FOLDER}/Constants.h
)

SET(SOURCEFILES_PUBLIC_DEFAULTS
  ${PUBLIC_DEFAULTS_FOLDER}/RevetmentDefaults.cpp
  ${PUBLIC_DEFAULTS_FOLDER}/RevetmentDefaults.h
)

set(SOURCEFILES_PUBLIC_DEFAULTS_ASPHALT_REVETMENT_WAVE_IMPACT
  ${PUBLIC_DEFAULTS_ASPHALT_REVETMENT_WAVE_IMPACT_FOLDER}/AsphaltRevetmentWaveImpactHydraulicAsphaltConcreteTopLayerDefaults.cpp
  ${PUBLIC_DEFAULTS_ASPHALT_REVETMENT_WAVE_IMPACT_FOLDER}/AsphaltRevetmentWaveImpactHydraulicAsphaltConcreteTopLayerDefaults.h
  ${PUBLIC_DEFAULTS_ASPHALT_REVETMENT_WAVE_IMPACT_FOLDER}/IAsphaltRevetmentWaveImpactTopLayerDefaults.h
)

set(SOURCEFILES_PUBLIC_DEFAULTS_GRASS_REVETMENT_WAVE_IMPACT
  ${PUBLIC_DEFAULTS_GRASS_REVETMENT_WAVE_IMPACT_FOLDER}/GrassRevetmentWaveImpactClosedSodDefaults.cpp
  ${PUBLIC_DEFAULTS_GRASS_REVETMENT_WAVE_IMPACT_FOLDER}/GrassRevetmentWaveImpactClosedSodDefaults.h
  ${PUBLIC_DEFAULTS_GRASS_REVETMENT_WAVE_IMPACT_FOLDER}/GrassRevetmentWaveImpactOpenSodDefaults.cpp
  ${PUBLIC_DEFAULTS_GRASS_REVETMENT_WAVE_IMPACT_FOLDER}/GrassRevetmentWaveImpactOpenSodDefaults.h
  ${PUBLIC_DEFAULTS_GRASS_REVETMENT_WAVE_IMPACT_FOLDER}/IGrassRevetmentWaveImpactDefaults.h
)

set(SOURCEFILES_PUBLIC_DEFAULTS_GRASS_REVETMENT_WAVE_RUNUP
  ${PUBLIC_DEFAULTS_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/GrassRevetmentWaveRunupClosedSodDefaults.cpp
  ${PUBLIC_DEFAULTS_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/GrassRevetmentWaveRunupClosedSodDefaults.h
  ${PUBLIC_DEFAULTS_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/GrassRevetmentWaveRunupOpenSodDefaults.cpp
  ${PUBLIC_DEFAULTS_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/GrassRevetmentWaveRunupOpenSodDefaults.h
  ${PUBLIC_DEFAULTS_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/GrassRevetmentWaveRunupRayleighClosedSodDefaults.cpp
  ${PUBLIC_DEFAULTS_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/GrassRevetmentWaveRunupRayleighClosedSodDefaults.h
  ${PUBLIC_DEFAULTS_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/GrassRevetmentWaveRunupRayleighOpenSodDefaults.cpp
  ${PUBLIC_DEFAULTS_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/GrassRevetmentWaveRunupRayleighOpenSodDefaults.h
  ${PUBLIC_DEFAULTS_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/IGrassRevetmentWaveRunupDefaults.h
  ${PUBLIC_DEFAULTS_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/IGrassRevetmentWaveRunupRayleighDefaults.h
)

set(SOURCEFILES_PUBLIC_DEFAULTS_NATURAL_STONE_REVETMENT
  ${PUBLIC_DEFAULTS_NATURAL_STONE_REVETMENT_FOLDER}/INaturalStoneRevetmentTopLayerDefaults.h
  ${PUBLIC_DEFAULTS_NATURAL_STONE_REVETMENT_FOLDER}/NaturalStoneRevetmentDefaults.cpp
  ${PUBLIC_DEFAULTS_NATURAL_STONE_REVETMENT_FOLDER}/NaturalStoneRevetmentDefaults.h
  ${PUBLIC_DEFAULTS_NATURAL_STONE_REVETMENT_FOLDER}/NordicStoneRevetmentTopLayerDefaults.cpp
  ${PUBLIC_DEFAULTS_NATURAL_STONE_REVETMENT_FOLDER}/NordicStoneRevetmentTopLayerDefaults.h
)

set(SOURCEFILES_PUBLIC_VALIDATORS
  ${PUBLIC_VALIDATORS_FOLDER}/GenericValidator.cpp
  ${PUBLIC_VALIDATORS_FOLDER}/GenericValidator.h
  ${PUBLIC_VALIDATORS_FOLDER}/HydraulicLoadsValidator.cpp
  ${PUBLIC_VALIDATORS_FOLDER}/HydraulicLoadsValidator.h
  ${PUBLIC_VALIDATORS_FOLDER}/RevetmentValidator.cpp
  ${PUBLIC_VALIDATORS_FOLDER}/RevetmentValidator.h
  ${PUBLIC_VALIDATORS_FOLDER}/TimeStepValidator.cpp
  ${PUBLIC_VALIDATORS_FOLDER}/TimeStepValidator.h
  ${PUBLIC_VALIDATORS_FOLDER}/ValidationIssue.cpp
  ${PUBLIC_VALIDATORS_FOLDER}/ValidationIssue.h
  ${PUBLIC_VALIDATORS_FOLDER}/ValidationIssueType.h
)

set(SOURCEFILES_PUBLIC_VALIDATORS_ASPHALT_REVETMENT_WAVE_IMPACT
  ${PUBLIC_VALIDATORS_ASPHALT_REVETMENT_WAVE_IMPACT_FOLDER}/AsphaltRevetmentWaveImpactValidator.cpp
  ${PUBLIC_VALIDATORS_ASPHALT_REVETMENT_WAVE_IMPACT_FOLDER}/AsphaltRevetmentWaveImpactValidator.h
)

set(SOURCEFILES_PUBLIC_VALIDATORS_GRASS_REVETMENT_WAVE_IMPACT
  ${PUBLIC_VALIDATORS_GRASS_REVETMENT_WAVE_IMPACT_FOLDER}/GrassRevetmentWaveImpactValidator.cpp
  ${PUBLIC_VALIDATORS_GRASS_REVETMENT_WAVE_IMPACT_FOLDER}/GrassRevetmentWaveImpactValidator.h
)

set(SOURCEFILES_PUBLIC_VALIDATORS_GRASS_REVETMENT_WAVE_RUNUP
  ${PUBLIC_VALIDATORS_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/GrassRevetmentWaveRunupRayleighValidator.cpp
  ${PUBLIC_VALIDATORS_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/GrassRevetmentWaveRunupRayleighValidator.h
  ${PUBLIC_VALIDATORS_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/GrassRevetmentWaveRunupValidator.cpp
  ${PUBLIC_VALIDATORS_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}/GrassRevetmentWaveRunupValidator.h
)

set(SOURCEFILES_PUBLIC_VALIDATORS_NATURAL_STONE_REVETMENT
  ${PUBLIC_VALIDATORS_NATURAL_STONE_REVETMENT_FOLDER}/NaturalStoneRevetmentValidator.cpp
  ${PUBLIC_VALIDATORS_NATURAL_STONE_REVETMENT_FOLDER}/NaturalStoneRevetmentValidator.h
)

# Add library
add_library(${LIBNAME} STATIC
  ${SOURCEFILES_PUBLIC}
  ${SOURCEFILES_PUBLIC_DEFAULTS}
  ${SOURCEFILES_PUBLIC_DEFAULTS_ASPHALT_REVETMENT_WAVE_IMPACT}
  ${SOURCEFILES_PUBLIC_DEFAULTS_GRASS_REVETMENT_WAVE_IMPACT}
  ${SOURCEFILES_PUBLIC_DEFAULTS_GRASS_REVETMENT_WAVE_RUNUP}
  ${SOURCEFILES_PUBLIC_DEFAULTS_NATURAL_STONE_REVETMENT}
  ${SOURCEFILES_PUBLIC_VALIDATORS}
  ${SOURCEFILES_PUBLIC_VALIDATORS_ASPHALT_REVETMENT_WAVE_IMPACT}
  ${SOURCEFILES_PUBLIC_VALIDATORS_GRASS_REVETMENT_WAVE_IMPACT}
  ${SOURCEFILES_PUBLIC_VALIDATORS_GRASS_REVETMENT_WAVE_RUNUP}
  ${SOURCEFILES_PUBLIC_VALIDATORS_NATURAL_STONE_REVETMENT}
)

# Configure folder structure
set_target_properties(${LIBNAME} PROPERTIES FOLDER Src)
source_group(${PUBLIC_FOLDER} FILES ${SOURCEFILES_PUBLIC})
source_group(${PUBLIC_DEFAULTS_FOLDER} FILES ${SOURCEFILES_PUBLIC_DEFAULTS})
source_group(${PUBLIC_DEFAULTS_ASPHALT_REVETMENT_WAVE_IMPACT_FOLDER} FILES ${SOURCEFILES_PUBLIC_DEFAULTS_ASPHALT_REVETMENT_WAVE_IMPACT})
source_group(${PUBLIC_DEFAULTS_GRASS_REVETMENT_WAVE_IMPACT_FOLDER} FILES ${SOURCEFILES_PUBLIC_DEFAULTS_GRASS_REVETMENT_WAVE_IMPACT})
source_group(${PUBLIC_DEFAULTS_GRASS_REVETMENT_WAVE_RUNUP_FOLDER} FILES ${SOURCEFILES_PUBLIC_DEFAULTS_GRASS_REVETMENT_WAVE_RUNUP})
source_group(${PUBLIC_DEFAULTS_NATURAL_STONE_REVETMENT_FOLDER} FILES ${SOURCEFILES_PUBLIC_DEFAULTS_NATURAL_STONE_REVETMENT})
source_group(${PUBLIC_VALIDATORS_FOLDER} FILES ${SOURCEFILES_PUBLIC_VALIDATORS})
source_group(${PUBLIC_VALIDATORS_ASPHALT_REVETMENT_WAVE_IMPACT_FOLDER} FILES ${SOURCEFILES_PUBLIC_VALIDATORS_ASPHALT_REVETMENT_WAVE_IMPACT})
source_group(${PUBLIC_VALIDATORS_GRASS_REVETMENT_WAVE_IMPACT_FOLDER} FILES ${SOURCEFILES_PUBLIC_VALIDATORS_GRASS_REVETMENT_WAVE_IMPACT})
source_group(${PUBLIC_VALIDATORS_GRASS_REVETMENT_WAVE_RUNUP_FOLDER} FILES ${SOURCEFILES_PUBLIC_VALIDATORS_GRASS_REVETMENT_WAVE_RUNUP})
source_group(${PUBLIC_VALIDATORS_NATURAL_STONE_REVETMENT_FOLDER} FILES ${SOURCEFILES_PUBLIC_VALIDATORS_NATURAL_STONE_REVETMENT})

# Expose header files
target_include_directories(${LIBNAME} PUBLIC
  ${CMAKE_CURRENT_SOURCE_DIR}/${PUBLIC_FOLDER}
  ${CMAKE_CURRENT_SOURCE_DIR}/${PUBLIC_DEFAULTS_FOLDER}
  ${CMAKE_CURRENT_SOURCE_DIR}/${PUBLIC_DEFAULTS_ASPHALT_REVETMENT_WAVE_IMPACT_FOLDER}
  ${CMAKE_CURRENT_SOURCE_DIR}/${PUBLIC_DEFAULTS_GRASS_REVETMENT_WAVE_IMPACT_FOLDER}
  ${CMAKE_CURRENT_SOURCE_DIR}/${PUBLIC_DEFAULTS_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}
  ${CMAKE_CURRENT_SOURCE_DIR}/${PUBLIC_DEFAULTS_NATURAL_STONE_REVETMENT_FOLDER}
  ${CMAKE_CURRENT_SOURCE_DIR}/${PUBLIC_VALIDATORS_FOLDER}
  ${CMAKE_CURRENT_SOURCE_DIR}/${PUBLIC_VALIDATORS_ASPHALT_REVETMENT_WAVE_IMPACT_FOLDER}
  ${CMAKE_CURRENT_SOURCE_DIR}/${PUBLIC_VALIDATORS_GRASS_REVETMENT_WAVE_IMPACT_FOLDER}
  ${CMAKE_CURRENT_SOURCE_DIR}/${PUBLIC_VALIDATORS_GRASS_REVETMENT_WAVE_RUNUP_FOLDER}
  ${CMAKE_CURRENT_SOURCE_DIR}/${PUBLIC_VALIDATORS_NATURAL_STONE_REVETMENT_FOLDER}
)